testing connection to database

--- a/searchpd/searchpd/Web.config
+++ b/searchpd/searchpd/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-searchpd-20130701183226;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-searchpd-20130701183226.mdf" />
-  </connectionStrings>
+  <add name="searchpdEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=edkb67rq99.database.windows.net,1433;initial catalog=searchpd;persist security info=True;user id=matt.perdeck;password=Slameer1!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -19,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5"><assemblies><add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" /></assemblies></compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="None" />
     <pages>
