--- a/searchpd/searchpd.Tests/searchpd.Tests.csproj
+++ b/searchpd/searchpd.Tests/searchpd.Tests.csproj
@@ -116,7 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\ValuesControllerTest.cs" />
+    <Compile Include="Controllers\SearchControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
