--- a/searchpd/searchpd/packages.config
+++ b/searchpd/searchpd/packages.config
@@ -29,4 +29,7 @@
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
+  <package id="Autofac" version="3.0.2" targetFramework="net45" />
+  <package id="Autofac.Mvc" version="4.3.0.0" targetFramework="net45" />
+  <package id="Autofac.WebApi" version="3.0.2" targetFramework="net45" />
 </packages>
