--- a/searchpd/searchpd/packages.config
+++ b/searchpd/searchpd/packages.config
@@ -30,6 +30,6 @@
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
   <package id="Autofac" version="3.0.2" targetFramework="net45" />
-  <package id="Autofac.Mvc" version="4.3.0.0" targetFramework="net45" />
+  <package id="Autofac.Mvc4" version="3.0.0" targetFramework="net45" />
   <package id="Autofac.WebApi" version="3.0.2" targetFramework="net45" />
 </packages>
