--- a/searchpd/searchpd.Tests/searchpd.Tests.csproj
+++ b/searchpd/searchpd.Tests/searchpd.Tests.csproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\SearchControllerTest.cs" />
+    <Compile Include="UnitTests\UI\DisplayFormatterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -129,6 +130,9 @@
       <Project>{3CE65AA8-CB69-462E-AEA7-4A1DF2CCF5D6}</Project>
       <Name>searchpd</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="IntegrationTests\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
