--- a/searchpd/searchpd/packages.config
+++ b/searchpd/searchpd/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.0.2" targetFramework="net45" />
+  <package id="Autofac.Mvc4" version="3.0.0" targetFramework="net45" />
+  <package id="Autofac.WebApi" version="3.0.2" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.9.2" targetFramework="net45" />
@@ -27,9 +30,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="NSubstitute" version="1.6.1.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
-  <package id="Autofac" version="3.0.2" targetFramework="net45" />
-  <package id="Autofac.Mvc4" version="3.0.0" targetFramework="net45" />
-  <package id="Autofac.WebApi" version="3.0.2" targetFramework="net45" />
 </packages>
