--- a/searchpd/searchpd/searchpd.csproj
+++ b/searchpd/searchpd/searchpd.csproj
@@ -204,6 +204,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\CategorySuggestion.cs" />
+    <Compile Include="Models\ProductSuggestion.cs" />
     <Compile Include="Models\ISuggestion.cs" />
     <Compile Include="Product.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -211,6 +212,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AutofacModule.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
+    <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Search\AutofacModule.cs" />
     <Compile Include="Search\Searcher.cs" />
     <Compile Include="Models\DisplayObject.cs" />
@@ -271,6 +273,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Categories.cshtml" />
+    <Content Include="Views\Home\Products.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
