Refresh button on main site for suggestions cache

--- a/searchpd/main/Web.Debug.config
+++ b/searchpd/main/Web.Debug.config
@@ -16,6 +16,7 @@
   -->
     <appSettings>
         <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/api/search" />
+        <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refresh" />
     </appSettings>
     <system.web>
     <!--
