--- a/searchpd/main/Web.Release.config
+++ b/searchpd/main/Web.Release.config
@@ -16,6 +16,7 @@
   -->
     <appSettings>
         <add key="AutocompleteSearchApiUrl" value="kkkkkkkkkkkkk" />
+        <add key="AutocompleteRefreshApiUrl" value="tttttttttt" />
     </appSettings>
     <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
