--- a/searchpd/main/Web.config
+++ b/searchpd/main/Web.config
@@ -19,6 +19,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/api/search" />
+    <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refresh" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
