--- a/searchpd/main/Web.Debug.config
+++ b/searchpd/main/Web.Debug.config
@@ -15,8 +15,8 @@
     </connectionStrings>
   -->
     <appSettings>
-        <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/api/search" />
-        <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refresh" />
+        <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/api/searchxxxxxxxx" />
+        <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refreshxxxxxxxxx" />
     </appSettings>
     <system.web>
     <!--
