dummy commit to 2nd azure site

--- a/searchpd/main/Web.Release.config
+++ b/searchpd/main/Web.Release.config
@@ -15,8 +15,8 @@
     </connectionStrings>
   -->
     <appSettings>
-        <add key="AutocompleteSearchApiUrl" value="kkkkkkkkkkkkk" />
-        <add key="AutocompleteRefreshApiUrl" value="tttttttttt" />
+        <add key="AutocompleteSearchApiUrl" value="kkkkkkkkkkkkk" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+        <add key="AutocompleteRefreshApiUrl" value="tttttttttt" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
     </appSettings>
     <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
