--- a/searchpd/main/Web.config
+++ b/searchpd/main/Web.config
@@ -18,8 +18,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/api/search" />
-    <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refresh" />
+    <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/api/searchqqqqqqqq" />
+    <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refreshqqqqqqqqq" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
