--- a/searchpd/main/Web.config
+++ b/searchpd/main/Web.config
@@ -18,7 +18,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/api/search" />
+      <!--<add key="AutocompleteSearchApiUrl" value="http://localhost:7001/api/search" />#######################-->
+      <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/suggestions" />
     <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refresh" />
   </appSettings>
   <system.web>
