config change main azure site

--- a/searchpd/main/Web.Release.config
+++ b/searchpd/main/Web.Release.config
@@ -15,7 +15,7 @@
     </connectionStrings>
   -->
     <appSettings>
-        <add key="AutocompleteSearchApiUrl" value="http://searchpd.azurewebsites.net/api/search" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+        <add key="AutocompleteSearchApiUrl" value="http://searchpd.azurewebsites.net/suggestions" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
         <add key="AutocompleteRefreshApiUrl" value="http://searchpd.azurewebsites.net/home/refresh" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
     </appSettings>
     <system.web>
