--- a/searchpd/main/Web.Debug.config
+++ b/searchpd/main/Web.Debug.config
@@ -15,7 +15,7 @@
     </connectionStrings>
   -->
     <appSettings>
-        <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/api/search" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+        <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/suggestions" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
         <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refresh" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
     </appSettings>
     <system.web>
