initial lucene product search

--- a/searchpd/searchpd/searchpd.csproj
+++ b/searchpd/searchpd/searchpd.csproj
@@ -53,6 +53,12 @@
     <Reference Include="Autofac.Integration.WebApi">
       <HintPath>..\packages\Autofac.WebApi.3.0.2\lib\net40\Autofac.Integration.WebApi.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
+    <Reference Include="Lucene.Net">
+      <HintPath>..\packages\Lucene.Net.3.0.3\lib\NET40\Lucene.Net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="NSubstitute">
       <HintPath>..\packages\NSubstitute.1.6.1.0\lib\NET40\NSubstitute.dll</HintPath>
@@ -185,6 +191,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\CategorySuggestion.cs" />
+    <Compile Include="Models\ProductSearchResult.cs" />
     <Compile Include="Models\ProductSuggestion.cs" />
     <Compile Include="Models\ISuggestion.cs" />
     <Compile Include="Product.cs">
@@ -195,7 +202,8 @@
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Search\AutofacModule.cs" />
-    <Compile Include="Search\Searcher.cs" />
+    <Compile Include="Search\ProductSearcher.cs" />
+    <Compile Include="Search\SuggestionSearcher.cs" />
     <Compile Include="Models\DisplayObject.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -216,15 +224,6 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="web.config" />
-    <None Include="web.Debug.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
-    <None Include="web.Release.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
