--- a/searchpd/main/Web.config
+++ b/searchpd/main/Web.config
@@ -20,6 +20,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/suggestions" />
     <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refresh" />
+    <add key="LucenePath" value="Lucene" />
+    <add key="ProductCodeBoost" value="50" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
