--- a/searchpd/main/Web.config
+++ b/searchpd/main/Web.config
@@ -24,6 +24,7 @@
     <add key="ProductCodeBoost" value="50" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
