Refresh for product search results+demo pages

--- a/searchpd/main/Web.config
+++ b/searchpd/main/Web.config
@@ -22,6 +22,7 @@
     <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refresh" />
     <add key="LucenePath" value="Lucene" />
     <add key="ProductCodeBoost" value="50" />
+    <add key="NbrResultsPerPage" value="10" />
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
@@ -43,7 +44,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <profile defaultProvider="DefaultProfileProvider">
+    <profile defaultProvider="DefaultProfileProvider">  
       <providers>
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
