refresh for autoupdate suggestions

--- a/searchpd/main/Web.config
+++ b/searchpd/main/Web.config
@@ -18,11 +18,14 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="AutocompleteSearchApiUrl" value="http://localhost:7001/suggestions" />
-    <add key="AutocompleteRefreshApiUrl" value="http://localhost:7001/home/refresh" />
+
+    <!--Settings for autocomplete functionality-->
+    <add key="AutocompleteSearchUrl" value="http://localhost:7001/suggestions" />
+    <add key="AutocompleteRefreshUrl" value="http://localhost:7001/refresh/suggestions" />
     <add key="LucenePath" value="Lucene" />
     <add key="ProductCodeBoost" value="50" />
     <add key="NbrResultsPerPage" value="10" />
+    <add key="AutocompleteRefreshPassword" value="6f05153121c5392b7f57b9958aea252a" />
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
