New Lucene analyzers

--- a/searchpd/searchpd/packages.config
+++ b/searchpd/searchpd/packages.config
@@ -9,6 +9,7 @@
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net45" />
+  <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net45" />
