final search implementation

--- a/searchpd/main/Web.config
+++ b/searchpd/main/Web.config
@@ -18,11 +18,16 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--Settings for autocomplete functionality-->
+
+    <!--Settings for product search functionality-->
     <add key="AutocompleteSearchUrl" value="http://localhost:7001/suggestions" />
     <add key="AutocompleteRefreshUrl" value="http://localhost:7001/refresh/suggestions" />
     <add key="LucenePath" value="Lucene" />
-    <add key="ProductCodeBoost" value="50" />
+    <!-- Boosting of product codes relative to product descriptions during product searches.
+    If this is 5, than matches on product codes are 5 times more important than matches in product descriptions. -->
+    <add key="ProductCodeBoost" value="100" />
+    <!--For fuzzy matching against product descriptions-->
+    <add key="MinSimilarity" value="0.5" /> 
     <add key="NbrResultsPerPage" value="10" />
     <add key="AutocompleteRefreshPassword" value="6f05153121c5392b7f57b9958aea252a" />
   </appSettings>
